# Research-Assister

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: chat.js  upload.js
frontend/src/components/: ChatMessage.jsx  ChatPanel.jsx  Header.jsx  PdfViewer.jsx
src/: README.md  requirements.txt
src/app/api/: app.py  chat.py  health.py  ingest.py  main.py  schema.py
src/app/exception/: exception.py
src/app/logging/: logger.py
src/app/models/: cutsom_models.py
src/app/rag/: chain.py  context.py  embedding.py  ingest.py  loader.py  prompt.py  reload.py  vector_store.py
src/app/tests/: rag_test.py
src/app/tools/: tools.py
src/app/utils/: utils.py
