[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.6.2",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
